# core-nexus

./: .gitignore  .pnp.cjs  .pre-commit-config.yaml  .secrets.baseline  AGENT2_COMPREHENSIVE_STATUS_REPORT.md  AGENT2_PR_ACTION_PLAN.md  AGENT3_NOTIFICATION.md  CHROMADB_ANALYSIS_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CRITICAL_SEARCH_FIX_SUMMARY.md  CURRENT_STATUS.md  DEDUPLICATION_COMPLETE.md  DEDUPLICATION_DEPLOYMENT_GUIDE.md  DEDUPLICATION_DEPLOYMENT_PLAN.md  DEDUPLICATION_REVIEW_CHECKLIST.md  DEDUP_PR_REVIEW_FOCUS.md  DEPLOYMENT_FIX_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION_REPORT.md  EMERGENCY_SEARCH_DIAGNOSIS.md  EMERGENCY_SEARCH_FIX_PLAN.md  ENTERPRISE_DEDUP_PR_CHECKLIST.md  EXTRACTION_COMPLETION_REPORT.md  EXTRACTION_LIVE_STATUS.md  FINAL_STATUS_REPORT.md  LICENSE  Makefile  OBSERVABILITY_IMPLEMENTATION_PLAN.md  PGVECTOR_CONSISTENCY_FIX.md  PRODUCTION_DATA_STATUS.md  PRODUCTION_HEALTH_REPORT.md  PRODUCTION_STABILITY.md  PRODUCTION_STATUS_REPORT.md  PRODUCTION_TEST_RESULTS.md  PRODUCTION_TRACKING.md  QUERY_FIX_SUMMARY.md  README.md  ROOT_CAUSE_ANALYSIS.md  (+39 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: BRANCH_STRATEGY.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: dependabot-auto-merge.yml  node-ci.yml  py-ci.yml  release.yml  reusable-test.yml  slice.yml
.yarn/: after-install.sh
docker/lite-stores/: docker-compose.yml
docs/planning/: ENABLE_KNOWLEDGE_GRAPH.md
docs/production/: PARETO_PRODUCTION_OPTIMIZATION.md  PRODUCTION_ACTION_PLAN.md  PRODUCTION_STATUS_REPORT.md
docs/troubleshooting/: CRITICAL_FIX_STATUS.md  EXECUTE_THIS_NOW.md  FIX_IMMEDIATELY.md  FIX_QUERIES_NOW.md  README.md  URGENT_RUN_THIS_SQL.sql  check_embeddings.sql  debug_empty_queries.ps1  fix_database_now.py  fix_queries_powershell.ps1  windows_fix_commands.cmd
python/core_memory_slice/: README.md  __init__.py  lite_graph_store.py  lite_vector_store.py
python/example-service/: README.md  pyproject.toml
python/example-service/src/example_service/: __init__.py  main.py  models.py  service.py
python/example-service/tests/: __init__.py  test_api.py  test_service.py
python/memory_service/: .env.example  .env.minimal  ACTIVATE_KNOWLEDGE_GRAPH.md  AGENT_2_DEPLOYMENT_ASSIST.md  AGENT_2_SPRINT_SUMMARY.md  CHROMADB_SYNC_PLAN.md  CHROMADB_SYNC_STATUS_REPORT.md  CODE_REVIEW_FIXES.md  COMPREHENSIVE_STATUS_REPORT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TRIGGER.md  DOCKER_SETUP_INSTRUCTIONS.md  Dockerfile  Dockerfile.keepalive  Dockerfile.minimal  EMERGENCY_CHROMADB_ACTION_PLAN.md  EMERGENCY_PSQL_FIX.sql  EMPTY_QUERY_FIX.md  ENABLE_GRAPH_PRODUCTION.md  ENTITY_EXTRACTION_COMPREHENSIVE_REPORT.md  ENTITY_EXTRACTION_FINAL_REPORT.md  EXTRACTION_PROGRESS_REPORT.md  EXTRACTION_PROGRESS_UPDATE.md  FIX_API_VERIFICATION.md  FIX_EMPTY_QUERY_BUG.py  FIX_PGVECTOR_INDEX.sql  GEMINI_EXTRACTION_SUMMARY.md  GRAPH_DEPLOYMENT_READY.md  GRAPH_PROVIDER_FIX.md  IMMEDIATE_FIX_INSTRUCTIONS.md  KNOWLEDGE_GRAPH_ACTIVATION_PLAN.md  KNOWLEDGE_GRAPH_IMPLEMENTATION_REPORT.md  KNOWLEDGE_GRAPH_INTEGRATION.md  KNOWLEDGE_GRAPH_PIPELINE_DESIGN.md  KNOWLEDGE_GRAPH_PR_PLAN.md  KNOWLEDGE_GRAPH_STATUS.md  KNOWLEDGE_GRAPH_SUMMARY.md  KNOWLEDGE_GRAPH_VERIFICATION_REPORT.md  POST_EXTRACTION_SUMMARY.md  (+112 more)
python/memory_service/monitoring/: README.md  alertmanager.yml  alerts.yml  docker-compose.yml  grafana.Dockerfile  loki-config.yml  prometheus.Dockerfile  prometheus.yml  promtail-config.yml
python/memory_service/monitoring/grafana/dashboards/: core-nexus-latency.json
python/memory_service/monitoring/grafana/provisioning/dashboards/: dashboard.yml
python/memory_service/monitoring/grafana/provisioning/datasources/: datasource.yml
python/memory_service/observability/: README.md  docker-compose.yml  grafana-dashboards.yml  grafana-datasources.yml  otel-collector-config.yaml  prometheus-config.yml  start-observability.sh  tempo-config.yaml
python/memory_service/observability/dashboards/: core-nexus-overview.json  vector-operations.json
python/memory_service/src/memory_service/: __init__.py  adm.py  api.py  bulk_import.py  bulk_import_simple.py  dashboard.py  db_init_endpoint.py  db_monitoring.py  deduplication.py  embedding_models.py  graph_live_sync.py  logging_config.py  memory_export.py  metrics.py  models.py  observability.py  providers.py  providers_instrumented.py  search_fix.py  temporal.py  tracking.py  unified_store.py  unified_store_instrumented.py  validators.py
python/memory_service/tests/: README.md  test_graph_api_endpoints.py  test_graph_integration.py  test_graph_performance.py  test_graph_provider.py
python/memory_service/worker/: keep_alive.py
scripts/: ingest_one.py  query_one.py
slice_data/: graph.db  vectors.json
